# demo-jobset

./: README.md  default.nix  demo.cabal  demo.nix  release.nix  shell.nix
exe/: Main.hs
