name:                demo
version:             0.1.0.0
author:              David Johnson
maintainer:          djohnson.m@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable main
  main-is: Main.hs
  hs-source-dirs: exe
  ghc-options: -Wall -threaded -rtsopts
  build-depends: aeson,
                 base, servant,
                 servant-server,
                 warp
  default-language: Haskell2010

library
  hs-source-dirs: src
  ghc-options: -Wall
  build-depends: base, servant-server, warp
  default-language: Haskell2010

test-suite spec
    type: exitcode-stdio-1.0
    hs-source-dirs: spec
    main-is: Main.hs
    build-depends: base, servant-server
    default-language: Haskell2010
    ghc-options: -Wall


